--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,12 +1,13 @@
-{%- if page.comments != false and jekyll.environment == "production" -%}
+{%- if page.comments != false -%}
 
   <div id="disqus_thread"></div>
   <script>
+    /*
     var disqus_config = function () {
       this.page.url = '{{ page.url | absolute_url }}';
       this.page.identifier = '{{ page.url | absolute_url }}';
     };
-
+    */
     (function() {
       var d = document, s = d.createElement('script');
 
