--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,4 +24,5 @@ MathJax.Hub.Config({
 });
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
+{% seo %}
 </head>
